<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".detail.DetailActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        app:elevation="0dp"
        android:background="@android:color/transparent"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"/>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/image_bg"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:contentDescription="@string/movie_s_image"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintWidth_percent="1"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:scaleType="centerCrop"
            android:tint="@color/color_background_drop"
            android:background="@color/color_background_drop"
            tools:src="@drawable/ic_image_search"
            tools:ignore="UseAppTint" />

        <ImageView
            android:id="@+id/image_poster"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:contentDescription="@string/movie_s_image"
            app:layout_constraintDimensionRatio="3:4"
            app:layout_constraintWidth_percent="0.415"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="80dp"
            android:layout_marginStart="16dp"
            android:scaleType="centerCrop"
            tools:src="@drawable/ic_image_search"/>

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/image_poster"
            app:layout_constraintTop_toTopOf="@+id/image_poster"
            tools:text="Godzilla vs. Kong"
            android:textIsSelectable="true" />

        <TextView
            android:id="@+id/tv_release"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/image_poster"
            app:layout_constraintTop_toBottomOf="@id/tv_title"
            tools:text="2021-03-24"
            android:textIsSelectable="true" />


        <RatingBar
            android:id="@+id/rating_bar"
            style="@style/CustomRatingStyle"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_marginStart="16dp"
            tools:rating="4.5"
            android:isIndicator="true"
            android:max="5"
            android:layout_marginTop="50dp"
            app:layout_constraintStart_toEndOf="@+id/image_poster"
            app:layout_constraintTop_toBottomOf="@+id/tv_release" />

        <TextView
            android:id="@+id/tv_vote_count"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginTop="16dp"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="italic"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/image_poster"
            app:layout_constraintTop_toBottomOf="@id/rating_bar"
            tools:text="vote count"
            android:textIsSelectable="true" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="20dp"
            android:elevation="0dp"
            app:cardElevation="0dp"
            android:outlineProvider="none"
            app:cardBackgroundColor="@android:color/transparent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/image_poster"
            tools:layout_editor_absoluteX="16dp">

            <View
                android:layout_width="match_parent"
                android:background="@drawable/bg_cardview"
                android:layout_height="match_parent"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="20dp"
                android:orientation="vertical"
                android:padding="8dp">

                <TextView
                    android:id="@+id/label_popularity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:text="@string/popularity"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_popularity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:justificationMode="inter_word"
                    android:textColor="@color/white"
                    android:layout_marginBottom="8dp"
                    android:textStyle="italic"
                    android:textSize="16sp"
                    tools:targetApi="o"
                    tools:text="10000"
                    android:textIsSelectable="true" />

                <TextView
                    android:id="@+id/label_overview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:text="@string/overview"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tv_overview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:justificationMode="inter_word"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    tools:targetApi="o"
                    tools:text="@string/desc_overview"
                    android:textIsSelectable="true" />
            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btn_favorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/button_to_add_or_remove_item_from_favourite"
        android:backgroundTint="@color/color_background_drop"
        android:layout_gravity="bottom|end"
        app:tint="@color/red"
        app:borderWidth="0dp"
        android:layout_margin="16dp"
        android:src="@drawable/ic_favorite_border"/>

</androidx.coordinatorlayout.widget.CoordinatorLayout>